--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,4 @@
 <h1>Welcome#index</h1>
 <p>Find me in app/views/welcome/index.html.erb</p>
-<%= link_to 'Список станций', railway_stations_path %>
+<p><%= link_to 'Список станций', railway_stations_path %></p>
+<p><%= link_to 'Список поездов', trains_path %></p>
