--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -14,7 +14,7 @@
         <td><%= car.brand %></td>
         <td><%= link_to 'Show', car %></td>
         <td><%= link_to 'Edit', edit_car_path(car) %></td>
-        <td><%= link_to 'Destroy', car, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', car, method: :delete %></td>
       </tr>
     <% end %>
   </tbody>
@@ -23,3 +23,4 @@
 <br>
 
 <%= link_to 'New Car', new_car_path %>
+<%= link_to 'Index Page', root_path %>
