--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,4 +2,4 @@
 <p>Find me in app/views/welcome/index.html.erb</p>
 <p><%= link_to 'Список станций', railway_stations_path %></p>
 <p><%= link_to 'Список поездов', trains_path %></p>
-<p><%= link_to 'Список машин', cars_path %></p>
+<p><%= link_to 'Список маршрутов', routes_path %></p>
