--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,4 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<h1>Tutu</h1>
 <p><%= link_to 'Список станций', railway_stations_path %></p>
 <p><%= link_to 'Список поездов', trains_path %></p>
 <p><%= link_to 'Список маршрутов', routes_path %></p>
