--- a/app/views/routes/_form.html.erb
+++ b/app/views/routes/_form.html.erb
@@ -1,4 +1,6 @@
 <%= form_with(model: route, local: true) do |form| %>
+  <%= render 'common/errors', data: route %>
+
   <div class="field">
     <%= form.label :name %>
     <%= form.text_field :name %>
