--- a/app/views/trains/_form.html.erb
+++ b/app/views/trains/_form.html.erb
@@ -1,22 +1,17 @@
 <%= form_with(model: train, local: true) do |form| %>
-  <% if train.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(train.errors.count, "error") %> prohibited this train from being saved:</h2>
-
-      <ul>
-      <% train.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <%= render 'common/errors', data: train %>
 
   <div class="field">
     <%= form.label :number %>
     <%= form.text_field :number %>
   </div>
 
+  <div class="field">
+    <%= form.label :current_station %>
+    <%= form.collection_select :current_station_id, RailwayStation.all, :id, :title %>
+  </div>
+
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit "#{train.new_record? ? 'Создать' : 'Изменить'}" %>
   </div>
 <% end %>
