что-то добавил, уже не помню

--- a/app/views/routes/_form.html.erb
+++ b/app/views/routes/_form.html.erb
@@ -9,4 +9,7 @@
   <div class="actions">
     <%= form.submit %>
   </div>
+
+  <% cities_array = RailwayStation.all.map { |city| [city.title, city.id] } %>
+  <%= options_for_select(cities_array) %>
 <% end %>
