--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -9,5 +9,28 @@
   <%= @route.name %>
 </p>
 
+<p>
+  <strong>Станции:</strong>
+  <% if @route.railway_stations.empty? %>
+    Список пуст
+  <% else %>
+    <ul>
+      <% @route.railway_stations.each do |station| %>
+        <li>
+          <span><%= station.title %></span>
+          <span>
+            <%= form_tag update_position_railway_station_path(station), method: :patch do %>
+              <%= number_field_tag :position, station.position_in(@route) %>
+              <%= hidden_field_tag :route_id, @route.id %>
+              <%= submit_tag 'Изменить' %>
+            <% end %>
+          </span>
+        </li>
+      <% end %>
+    </ul>
+  <% end %>
+</p>
+
+
 <%= link_to 'Edit', edit_route_path(@route) %> |
 <%= link_to 'Back', routes_path %>
