--- a/app/views/railway_stations/_form.html.erb
+++ b/app/views/railway_stations/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: railway_station, local: true) do |form| %>
+<%= form_for(railway_station) do |form| %>
   <%= render 'common/errors', data: railway_station %>
 
   <div class="field">
