--- a/app/views/routes/new.html.erb
+++ b/app/views/routes/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Route</h1>
 
-<%= render 'form', route: @route %>
+<%= render 'form', route: @route, rs: @railway_stations %>
 
 <%= link_to 'Back', routes_path %>
